--- a/index.html
+++ b/index.html
@@ -32,32 +32,42 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!--**********************************************************************************************************-->
+    <!--* script head -->
 
-    <!--* script -->
+      <!-- script Vue.js -->
+      <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-    <!-- script Vue.js -->
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-
-    <!-- Axios cdn -->
-    <script src=" https://unpkg.com/axios/dist/axios.min.js "></script>
+    <!--* Axios cdn -->
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"></script>
 
     <!-- script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
-    <!-- script personal js -->
-    <script src="./js/script.js"></script>
-
 </head>
 
 <body>
 
-    <div class="app">
-        
+    <div id="app">
+        <div class="container d-flex justify-content-center align-items-center vh-100">
+            <div v-if="emails.lenght == 10" class="card" style="width: 20rem;">
+
+                <ul class="list-group list-group-flush" v-bind:emails="emails">
+                    <li v-for="(email, index) in emails" class="list-group-item">{{ emails[index] }}></li>
+                </ul>
+            </div>
+        </div>
     </div>
 
+
+    <!--**********************************************************************************************************-->
+    <!--* script -->
+
+  
+
+    <!-- script personal js -->
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
