--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div id="app">
         <div class="container d-flex justify-content-center align-items-center vh-100">
-            <div v-if="emails.lenght == 10" class="card" style="width: 20rem;">
+            <div v-if="mails.lenght == 10" class="card" style="width: 20rem;">
 
                 <ul class="list-group list-group-flush" v-bind:mails="mail">
                     <li v-for=" mail  in mails" class="list-group-item">{{ mail }}></li>
