--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div id="app">
         <div class="container d-flex justify-content-center align-items-center vh-100">
-            <div v-if="mails.lenght == 10" class="card" style="width: 20rem;">
+            <div v-if="mails.length == 10" class="card" style="width: 20rem;">
 
                 <ul class="list-group list-group-flush" v-bind:mails="mail">
                     <li v-for=" mail  in mails" class="list-group-item">{{ mail }}></li>
@@ -62,7 +62,7 @@
 
 
     <!--**********************************************************************************************************-->
-    <!--* script bodY -->
+    <!--* script body -->
 
     <!-- script personal js -->
     <script src="./js/script.js"></script>
